Fix some display issues present on smaller-screened devices

--- a/resources/assets/less/bem/supporter-perk-item.less
+++ b/resources/assets/less/bem/supporter-perk-item.less
@@ -58,6 +58,7 @@
 
     @media @mobile {
       height: 300px;
+      justify-content: center;
     }
   }
 
