--- a/resources/assets/less/bem/supporter-status.less
+++ b/resources/assets/less/bem/supporter-status.less
@@ -61,9 +61,11 @@
   &__pippi {
     .at2x-simple('/images/layout/supporter/header-pippi.png');
     background-size: cover;
+    background-position: center;
     height: 348px;
     width: 375px;
     align-items: flex-end;
+    max-width: 100%;
   }
 
   &__progress-bar {
